730d757d219b45930b9a3293f38e55ca0b36fbb1 Fix: Button alignment issues in Bulma, Foundation and Fomantic
Sync to source repo @730d757d219b45930b9a3293f38e55ca0b36fbb1

--- a/css/buttons.foundation.css
+++ b/css/buttons.foundation.css
@@ -172,6 +172,9 @@ div.dt-button-collection span.dt-button-spacer.bar {
     box-shadow: none !important;
   }
 }
+div.dt-buttons.button-group {
+  margin-bottom: 0;
+}
 div.dt-buttons.button-group div.dt-button-split {
   margin-bottom: 0;
 }
